--- a/app/package.json
+++ b/app/package.json
@@ -12,12 +12,14 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "express-partials": "^0.3.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.7",
+    "pg": "^8.11.5",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3"
   }
 }
