--- a/app/config/dbconfig.json
+++ b/app/config/dbconfig.json
@@ -1,7 +1,7 @@
 {
     "database": "express_demo",
     "username": "root",
-    "password": "your_database_password",
+    "password": "",
     "options": {
         "host": "localhost",
         "port": 3306,
